# birdnet-analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  plan.md  pyproject.toml
configs/: local.env.example  ubuntuplex.env.example
docs/: LESSONS.md  STATUS.md  sample-data.md
scripts/: dawn_chorus_hourly.py  print_schema.py  run_dev.sh
src/birdnet_analytics/: __init__.py  config.py  db.py  sun.py  weather.py  web.py
